--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p></footer>
+        <p>Site criado por <a href="https://github.com/prmergu" target="_blank">Paulo Ricardo</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p></footer>
 
 </body>
 </html>
